# simple-weather-service

./: .gitignore  .sample.env  .test.env  README.md  docker-compose.yaml  pyproject.toml  start.sh
app/: deps.py  exceptions.py  main.py  prestart.py
app/api/: main.py
app/api/v1/: weather.py
app/core/: config.py
app/core/aws/: base.py  dynamodb.py  s3.py
app/repositories/: base.py  weather_event.py
app/schemas/: api.py  weather.py
app/services/: weather.py
app/storages/: base.py  weather.py
tests/: conftest.py
tests/integration/api/v1/: test_weather.py
